fix(player): hide scrollbar for firefox
 #7

--- a/content/beta/css/main.css
+++ b/content/beta/css/main.css
@@ -2,6 +2,10 @@ html[ic_scrollbar='true'] ::-webkit-scrollbar {
   width: 0;
 }
 
+html[ic_scrollbar='true'] {
+  scrollbar-width: none;
+}
+
 .video-player-wrapper {
   transition: max-height 0.75s ease-in-out;
 }
